docs: fix homepage on small viewport

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -340,11 +340,14 @@ pre code {
     background-color: #344e69;
   }
 
-  .doc-main {
+  .main {
     width: 100%;
-    margin-left: 0;
     margin-top: 60px;
     position: unset;
+  }
+
+  .doc-main {
+    margin-left: 0;
   }
 
   .nav {
